# Clickstream-ETL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/config/: settings.py
app/db/: clickhouse.py  postgres.py
app/etl/: full_load.py  incremental_load.py  pipeline.py  transforms.py
app/web/: main.py
config/: default.yaml
scripts/: check_etl_counts.py  load_csv.py  reset_etl_state.py  test_clickhouse.py  test_postgres.py
